--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 			<div class="sectionContent">
 				<article>
 					<h2>University of Zagreb, Faculty of Civil Engineering</h2>
-					<p class="subDetails">PhD, Civil Engineering materials</p>
+					<p class="subDetails">PhD, Materials in Civil Engineering</p>
 					<p>December 2018 - Present</p>
 				</article>
 
