--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html lang="en" class="bcc">
     <head>
-        <meta name="viewport" content="width=device-width"/>
+        <meta name="viewport" content="width=1024"/>
         <meta name="description" content="Web Page of Sanjin Gumbarević."/>
         <meta charset="UTF-8">
         <title>Sanjin Gumbarević</title>
