--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
             <div class="font">
                 <h3 class="txt2"><b>Personal Pages:</b></h3>
                 <p class="txt5"> <a href="https://www.researchgate.net/profile/Sanjin_Gumbarevic">ResearchGate,</a>
-                <a href="https://www.linkedin.com/in/sanjin-gumbarevi%C4%87-bb4177164/"> LinkedIn</a>
+                <a href="https://www.linkedin.com/in/sanjin-gumbarevi%C4%87-bb4177164/"> LinkedIn,</a>
                 <a href="https://www.grad.unizg.hr/en/sanjin.gumbarevic"> Faculty webpage,</a>
-                <a href="https://scholar.google.com/citations?user=9H5v4dQAAAAJ&hl=en">Google Scholar.</a></p>
+                <a href="https://scholar.google.com/citations?user=9H5v4dQAAAAJ&hl=en">and Google Scholar.</a></p>
             </div>
         </div>
     </body>
