--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="description" content="Web Page of Sanjin Gumbarević."/>
         <meta charset="UTF-8">
         <title>Sanjin Gumbarević</title>
-        <link rel="icon" href="favicon.ico">
+        <link rel="icon" href="favicon.ico?">
         <link rel="stylesheet" href="css/styles.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     </head>
