--- a/scientific_papers.html
+++ b/scientific_papers.html
@@ -35,7 +35,7 @@
             <div class="font">
                 <h3 class="txt2"><b>Conferences:</b></h3>
                 <p class="txt5">
-                    <b>Gumbarević, Sanjin</b>; Milovanović, Bojan; Gaši, Mergim; Bagarić, Marina: <i>Application of Multilayer Perceptron Method on Heat Flow Method Results for Reducing the in-situ Measurement Time.</i> 7th International Electronic Conference on Sensors and Applications session Applications. Mariani, Stefano; Messervey, Tom A.; Vallan, Alberto; Bosse, Stefan (eds.). Online: Engineering Proceedings, MDPI, 2020. 2(1), 29, 6 doi:<a href="https://doi.org/10.2478/10.3390/ecsa-7-08272">10.3390/ecsa-7-08272.</a>
+                    <b>Gumbarević, Sanjin</b>; Milovanović, Bojan; Gaši, Mergim; Bagarić, Marina: <i>Application of Multilayer Perceptron Method on Heat Flow Method Results for Reducing the in-situ Measurement Time.</i> 7th International Electronic Conference on Sensors and Applications session Applications. Mariani, Stefano; Messervey, Tom A.; Vallan, Alberto; Bosse, Stefan (eds.). Online: Engineering Proceedings, MDPI, 2020. 2(1), 29, 6 doi:<a href="https://doi.org/10.3390/ecsa-7-08272">10.3390/ecsa-7-08272.</a>
                 </p>
                 <p class="txt5">
                     Štirmer, Nina; Milovanović, Bojan; <b>Gumbarević, Sanjin</b>; Gaši, Mergim; Bagarić, Marina: <i>Obrazovanje u BIM-u i NZEB-u za povećanje kvalitete zgrada.</i> 21st International Symposium on Quality, Quality - Yesterday, Today, Tomorrow / Drljača, Miroslav (ur.). Zagreb: Croatian Society of Quality Managers, 2020. str. 1-9 doi:<a href="https://doi.org/10.30657/hdmk.2020.32">10.30657/hdmk.2020.32.</a>
