--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div style="position: absolute; left: 0; width: 20%; height: 100%; background-color: rgb(35, 36, 37);">
             <img src="headshot.jpg" alt="Sanjin Gumbarević" style="border-radius: 100%; width: 100%;">
             <div class="font" style="position: relative; left: 0%; top: 0%; width: 100%; background-color: rgb(35, 36, 37);">
-                <p class="txt2"> <br> <b style="font-size: large;">Welcome to my webpage!</b> <br> <br> Hello! My name is Sanjin Gumbarević and I work as a research assistant at University of Zagreb, Faculty of Civil Engineering, Departmant of materials. </p>
+                <p class="txt2"> <br> <b style="font-size: large;">Welcome to my webpage!</b> <br> <br> Hello! My name is Sanjin Gumbarević and I work as a research assistant at University of Zagreb, Faculty of Civil Engineering, Department of Materials. </p>
                 <p class="txt2"> Here you can explore my work in Civil Engineering, Building Energy Analysis, Building Information Modeling, Numerical Modeling, Machine Learning Applications, etc.</p>
                 <p class="txt2"> <br> For any question feel free to contact me by e-mail: <a href="mailto: sgumbarevic@grad.hr">sgumbarevic@grad.hr</a></p>
             </div>
